<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="java.util.HashMap" />

        <variable
            name="user"
            type="com.example.ggq.restaurantfin.entity.Customer" />

        <variable
            name="errormap"
            type="HashMap&lt;String,String&gt;" />

        <variable
            name="test"
            type="String" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f2f1"
        android:orientation="vertical"
        tools:context="com.example.ggq.restaurantfin.FragmentBag.SignFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#3f51b4"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/quit_sign"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@mipmap/quit_icon" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="注册"
                    android:textColor="#f0f2f1"
                    android:textSize="20sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/usernum"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/userNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:hint="字母和数字的组合，字母开头"
                    android:inputType="textPersonName"
                    android:text="@={user.customerNumber}"
                    android:textSize="12sp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text='@{errormap[`usernum`]??``}'
                android:textColor="#ff0106" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/pwd"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:hint="密码"
                    android:inputType="textPassword"
                    android:text="@={user.customerPass}" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{errormap[`pwd`]??``}"
                android:textColor="#ff0106" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/agpwd"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/agpwd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="35dp"
                    android:ems="10"
                    android:hint="再次输入密码"
                    android:inputType="textPassword" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{errormap[`agpwd`]??``}"
                android:textColor="#ff0106" />

            <FrameLayout
                android:id="@+id/loading_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"></FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/username"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:hint="姓名"
                    android:inputType="textPersonName"
                    android:text="@={user.customerName}" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{errormap[`username`]??``}"
                android:textColor="#ff0106" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="15dp"
                    android:text="@string/sex"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:text="男"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="25dp"
                        android:text="女"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/phone"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:hint="电话号码"
                    android:inputType="textPersonName"
                    android:text="@={user.customerPhone}" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{errormap[`phone`]??``}"
                android:textColor="#ff0106" />

            <Button
                android:id="@+id/tj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="提交" />
        </LinearLayout>
    </LinearLayout>
</layout>